examples/errors/much.spl

hi(a:Int,b:Bool,c:Char) {
    return;
}

int main() {
    hi(2);
}